# sparse_autoencoder

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  benchmarks.ipynb  demo.ipynb  index.html  mkdocs.yml  objects.inv  profiling.ipynb  pyproject.toml  search.html
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: checks.yml  gh-pages.yml  release.yml
SUMMARY/: index.html
citation/: index.html
contributing/: index.html
css/: material_extra.css
demo/: index.html
docs/: README.md  gen_ref_pages.py  make_docs.py
docs/content/: SUMMARY.md  citation.md  contributing.md  demo.ipynb  flexible_demo.ipynb  index.md  pre-process-datasets.ipynb  use-sae.ipynb  use_trained_model.ipynb
docs/content/css/: custom_formatting.css
docs/content/faq/: SUMMARY.md  abstract_structure.md  begin_collaborating.md  bypassing_lint.md  design_structure.md  entry_point.md  index.md  missing_function_documentation.md  proposing_major_changes.md
docs/content/javascript/: custom_formatting.js
docs/source/: conf.py  index.md
docs/source/apidoc_templates/: module.rst_t  toc.rst_t
docs/source/content/: gallery.md  getting_started.md  getting_started_mech_interp.md
flexible_demo/: index.html
getting_started/: index.html
pre-process-datasets/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/activation_resampler/: index.html
reference/activation_resampler/abstract_activation_resampler/: index.html
reference/activation_resampler/activation_resampler/: index.html
reference/activation_resampler/utils/: index.html
reference/activation_store/: index.html
reference/activation_store/base_store/: index.html
reference/activation_store/disk_store/: index.html
reference/activation_store/list_store/: index.html
reference/activation_store/tensor_store/: index.html
reference/activation_store/utils/: index.html
reference/autoencoder/: index.html
reference/autoencoder/abstract_autoencoder/: index.html
reference/autoencoder/components/: index.html
reference/autoencoder/lightning/: index.html
reference/autoencoder/model/: index.html
reference/autoencoder/types/: index.html
reference/autoencoder/utils/: index.html
reference/loss/: index.html
reference/loss/abstract_loss/: index.html
reference/loss/decoded_activations_l2/: index.html
reference/loss/learned_activations_l1/: index.html
reference/loss/mse_reconstruction_loss/: index.html
reference/loss/reducer/: index.html
reference/metrics/: index.html
reference/metrics/abstract_metric/: index.html
reference/metrics/generate/: index.html
reference/metrics/loss/: index.html
reference/metrics/metrics_container/: index.html
reference/metrics/resample/: index.html
reference/metrics/train/: index.html
reference/metrics/utils/: index.html
reference/metrics/validate/: index.html
reference/metrics/wrappers/: index.html
reference/optimizer/: index.html
reference/optimizer/abstract_optimizer/: index.html
reference/optimizer/adam_with_reset/: index.html
reference/optimizer/deepspeed_adam_with_reset/: index.html
reference/source_data/: index.html
reference/source_data/abstract_dataset/: index.html
reference/source_data/mock_dataset/: index.html
reference/source_data/pretokenized_dataset/: index.html
reference/source_data/random_int/: index.html
reference/source_data/text_dataset/: index.html
reference/source_model/: index.html
reference/source_model/replace_activations_hook/: index.html
reference/source_model/reshape_activations/: index.html
reference/source_model/store_activations_hook/: index.html
reference/source_model/zero_ablate_hook/: index.html
reference/src_model/: index.html
reference/src_model/store_activations_hook/: index.html
reference/tensor_types/: index.html
reference/train/: index.html
reference/train/abstract_pipeline/: index.html
reference/train/generate_activations/: index.html
reference/training_runs/: index.html
reference/utils/: index.html
scripts/: checks.py
search/: search_index.json
sparse_autoencoder/: __init__.py  scratch.py  tensor_types.py
sparse_autoencoder/activation_resampler/: __init__.py  abstract_activation_resampler.py  activation_resampler.py
sparse_autoencoder/activation_store/: __init__.py  base_store.py  disk_store.py  list_store.py  tensor_store.py
sparse_autoencoder/activations/: ActivationBuffer.py  ActivationStore.py  DiskActivationStore.py  ListActivationStore.py  TensorActivationStore.py
sparse_autoencoder/autoencoder/: __init__.py  abstract_autoencoder.py  group_models.py  lightning.py  loss.py  model.py  tied_bias.py  types.py  unit_norm_linear.py
sparse_autoencoder/dataset/: dataloader.py
sparse_autoencoder/experiments/: gpt2_wide_initial_sweep.py
sparse_autoencoder/loss/: __init__.py  abstract_loss.py  decoded_activations_l2.py  learned_activations_l1.py  mse_reconstruction_loss.py  reducer.py
sparse_autoencoder/metrics/: __init__.py  abstract_metric.py  histogram_metric.py  l0_norm_metric.py  metrics_container.py  reducer.py
sparse_autoencoder/optimizer/: __init__.py  abstract_optimizer.py  adam_with_reset.py  deepspeed_adam_with_reset.py
sparse_autoencoder/source_data/: __init__.py  abstract_dataset.py  c4_pre_tokenized.py  mock_dataset.py  pile_uncopyrighted.py  pretokenized_dataset.py  random_int.py  text_dataset.py
sparse_autoencoder/source_model/: __init__.py  model.py  replace_activations_hook.py  reshape_activations.py  reshape_methods.py  store_activations_hook.py  zero_ablate_hook.py
sparse_autoencoder/src_data/: src_data.py
sparse_autoencoder/src_model/: dataloader.py  src_data.py  store_activations_hook.py
sparse_autoencoder/train/: __init__.py  abstract_pipeline.py  default_pipeline.py  generate_activations.py  join_sweep.py  pipeline.py  resample_neurons.py  sweep.py  sweep_config.py  train.py  train_autoencoder.py
sparse_autoencoder/training_runs/: __init__.py  gpt2.py  gpt2_small_all_layers.py  modified.py
sparse_autoencoder/utils/: __init__.py  data_parallel.py
src/: example_notebook.ipynb
(+178 files in other folders)
